test/CheckError/Syntax/InvalidBitShiftInTemplateArgument.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

// CHECK: {{.*}}/InvalidBitShiftInTemplateArgument.loci:16:13: error: expected 'NAME'; got 'RTRIBRACKET'
// CHECK: {{.*}}/InvalidBitShiftInTemplateArgument.loci:16:16: error: expected 'LROUNDBRACKET'; got 'RTRIBRACKET'
// CHECK: {{.*}}/InvalidBitShiftInTemplateArgument.loci:20:58: error: expected 'NAME'; got 'RTRIBRACKET'
// CHECK: {{.*}}/InvalidBitShiftInTemplateArgument.loci:20:61: error: expected 'RROUNDBRACKET'; got 'RTRIBRACKET'

template <bool V>
class C () { }

template <int A, int B>
import C< A<<B > testLeftShiftInTemplateArgument();

template <int A, int B>
import C< A>>B > testRightShiftInTemplateArgument();

export void testLeftShiftInVariableTemplate(unused C< A<<B > value) { }

export void testRightShiftInVariableTemplate(unused C< A>>B > value) { }
